--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -51,7 +51,7 @@
   --popover-foreground: oklch(0.141 0.005 285.823);
   --primary: oklch(0.373 0.18 189deg);
   --primary-foreground: oklch(0.985 0 0);
-  --secondary: oklch(0.967 0.001 286.375);
+  --secondary: oklch(72.28% 0.168 53.7);
   --secondary-foreground: oklch(0.21 0.006 285.885);
   --muted: oklch(0.967 0.001 286.375);
   --muted-foreground: oklch(0.552 0.016 285.938);
@@ -182,5 +182,11 @@
   }
   body {
     @apply bg-background text-foreground;
+  }
+  h1 {
+    font-family: "Montserrat", sans-serif;
+  }
+  h2 {
+    font-family: "Open Sans", sans-serif;
   }
 }
